# Raytracer

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
assets/: .gitattributes
assets/angel/: angel.mtl
assets/boots/: boots.mtl
assets/crab/: crab.dae  crab.mtl
assets/minecraft/: minecraft.mtl
assets/owl/: owl.mtl
clKernels/: raytracing.cl
include/: application.hpp  bvh.hpp  camera.hpp  clprogram.hpp  framebuffer.hpp  graphics.hpp  mesh.hpp  object.hpp  scene.hpp  shader_light.hpp  window.hpp
shaders/blinn_phong/: fragment.glsl  vertex.glsl
shaders/light/directional/: geometry_direction.glsl  vertex_direction.glsl
shaders/light/spot/: geometry_cutoff.glsl  vertex_cutoff.glsl
shaders/post_processing/: fragment.glsl
shaders/shadowMapping/: fragment.glsl  geometry.glsl  vertex.glsl
src/: .application.cpp.swp  application.cpp  camera.cpp  clprogram.cpp  framebuffer.cpp  graphics.cpp  main.cpp  mesh.cpp  object.cpp  scene.cpp  shader_light.cpp  window.cpp
